; ModuleID = '/home/carl/AnghaBench/freebsd/sys/dev/axgbe/extr_xgbe-drv.c_xgbe_init_tx_coalesce.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/dev/axgbe/extr_xgbe-drv.c_xgbe_init_tx_coalesce.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.xgbe_prv_data = type { i32, i32, %struct.xgbe_hw_if }
%struct.xgbe_hw_if = type { i32 (%struct.xgbe_prv_data.0*)* }
%struct.xgbe_prv_data.0 = type opaque

@.str = private unnamed_addr constant [26 x i8] c"-->xgbe_init_tx_coalesce\0A\00", align 1
@XGMAC_INIT_DMA_TX_USECS = common dso_local global i32 0, align 4
@XGMAC_INIT_DMA_TX_FRAMES = common dso_local global i32 0, align 4
@.str.1 = private unnamed_addr constant [26 x i8] c"<--xgbe_init_tx_coalesce\0A\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @xgbe_init_tx_coalesce(%struct.xgbe_prv_data* %0) #0 {
  %2 = alloca %struct.xgbe_prv_data*, align 8
  %3 = alloca %struct.xgbe_hw_if*, align 8
  store %struct.xgbe_prv_data* %0, %struct.xgbe_prv_data** %2, align 8
  %4 = load %struct.xgbe_prv_data*, %struct.xgbe_prv_data** %2, align 8
  %5 = getelementptr inbounds %struct.xgbe_prv_data, %struct.xgbe_prv_data* %4, i32 0, i32 2
  store %struct.xgbe_hw_if* %5, %struct.xgbe_hw_if** %3, align 8
  %6 = call i32 @DBGPR(i8* getelementptr inbounds ([26 x i8], [26 x i8]* @.str, i64 0, i64 0))
  %7 = load i32, i32* @XGMAC_INIT_DMA_TX_USECS, align 4
  %8 = load %struct.xgbe_prv_data*, %struct.xgbe_prv_data** %2, align 8
  %9 = getelementptr inbounds %struct.xgbe_prv_data, %struct.xgbe_prv_data* %8, i32 0, i32 1
  store i32 %7, i32* %9, align 4
  %10 = load i32, i32* @XGMAC_INIT_DMA_TX_FRAMES, align 4
  %11 = load %struct.xgbe_prv_data*, %struct.xgbe_prv_data** %2, align 8
  %12 = getelementptr inbounds %struct.xgbe_prv_data, %struct.xgbe_prv_data* %11, i32 0, i32 0
  store i32 %10, i32* %12, align 8
  %13 = load %struct.xgbe_hw_if*, %struct.xgbe_hw_if** %3, align 8
  %14 = getelementptr inbounds %struct.xgbe_hw_if, %struct.xgbe_hw_if* %13, i32 0, i32 0
  %15 = load i32 (%struct.xgbe_prv_data.0*)*, i32 (%struct.xgbe_prv_data.0*)** %14, align 8
  %16 = load %struct.xgbe_prv_data*, %struct.xgbe_prv_data** %2, align 8
  %17 = bitcast %struct.xgbe_prv_data* %16 to %struct.xgbe_prv_data.0*
  %18 = call i32 %15(%struct.xgbe_prv_data.0* %17)
  %19 = call i32 @DBGPR(i8* getelementptr inbounds ([26 x i8], [26 x i8]* @.str.1, i64 0, i64 0))
  ret void
}

declare dso_local i32 @DBGPR(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
